--- a/readme_0902-20-6764.md
+++ b/readme_0902-20-6764.md
@@ -10,6 +10,6 @@
 6. Realice un commit correspondiente y agregue un comentario con un Gitmoji
 7. Proceda a subir sus cambios a su rama secundaria
 8. Unifique su codigo a la rama maestra (Master o main)
-9. Proceda a subir los cambios al repositorio remoto
+9. Proceda a subir los cambios al repositorio remoto.
 10. Comparta el link de su repositorio en el apartado del examen (en plataforma)
 
